<resources>
    <string name="app_name">ADB</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_test">"NUEVO TEST"</string>
    <string name="menu_ejercicio">"NUEVO EJERCICIO"</string>
    <string name="menu_seguimiento">"SEGUIMIENTO"</string>
    <string name="button_send">"ENVIAR"</string>
    <string name="button_advice">VER AYUDA</string>

    <string name="subir_fichero">"SUBIR_FICHERO"</string>
    <string name="sacar_foto">"SACAR_FOTO"</string>
    <string name="grabar_audio">"GRABAR AUDIO"</string>
    <string name="grabar_video">"GRABAR VIDEO"</string>

    <string name="login_usuario">"Usuario"</string>
    <string name="login_DNI">"Introduce DNI"</string>

    <string name="login_password">"Contraseña"</string>
    <string name="login_pass">"Introduce password"</string>

    <string name="login_access">"ACCEDER"</string>
    
    <string name="no_camera">Es necesario tener una camara en el movil para sacar una foto</string>
    <string name="no_micro">Es necesario tener un microfono en el movil para grabar un audio</string>


</resources>
