<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.adibidea.tta.adb.Presentacion.MainActivity">

    <TextView
        android:id="@+id/menu_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subir_fichero"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="29dp"
        android:onClick="fichero"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sacar_foto"
        tools:layout_editor_absoluteY="77dp"
        tools:layout_editor_absoluteX="16dp"
        android:onClick="foto"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabar_audio"
        tools:layout_editor_absoluteY="125dp"
        tools:layout_editor_absoluteX="16dp"
        android:onClick="rec_audio"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabar_video"
        tools:layout_editor_absoluteY="125dp"
        tools:layout_editor_absoluteX="16dp"
        android:onClick="rec_video"/>

</LinearLayout>
