<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.adibidea.tta.adb.Presentacion.MainActivity">

        <TextView
            android:id="@+id/menu_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_test"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="29dp"
            android:onClick="test"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_ejercicio"
            tools:layout_editor_absoluteY="77dp"
            tools:layout_editor_absoluteX="16dp"
            android:onClick="ejercicio"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_seguimiento"
            tools:layout_editor_absoluteY="125dp"
            tools:layout_editor_absoluteX="16dp"
            android:onClick="seguimiento"/>

</LinearLayout>
